# webbundle

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: build.yml  nightly.yml  release.yml  weekly.yml
src/: builder.rs  bundle.rs  decoder.rs  encoder.rs  lib.rs  main.rs  prelude.rs
tests/builder/: index.html
webbundle/: Cargo.toml
webbundle-bench/: Cargo.toml  Make.zsh  README.md  bench.ts  run-bench-cache-aware.ts  run-bench.ts  run-webserver.ts
webbundle-bench/src/: main.rs
webbundle-bench/templates/: benchmark.html  index.html  module.html
webbundle-cli/: Cargo.toml
webbundle-cli/src/: main.rs
webbundle-ffi/: Cargo.toml  README.md  build.rs
webbundle-ffi/examples/: Makefile  main.c
webbundle-ffi/src/: lib.rs
webbundle-server/: Cargo.toml
webbundle-server/src/: main.rs
webbundle/benches/: fs-build-bench.rs
webbundle/examples/: create-webbundle.rs
webbundle/src/: builder.rs  bundle.rs  decoder.rs  encoder.rs  lib.rs  main.rs  prelude.rs
webbundle/src/fs/: builder.rs
webbundle/tests/builder/: index.html
webbundle/tests/builder/js/: hello.js
