[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "WebBundle library"
edition = "2018"
license = "Apache-2.0"
name = "webbundle"
repository = "https://github.com/google/webbundle"
version = "0.1.0"

[dependencies]
url = "2.1.1"
anyhow = "1.0.26"
structopt = "0.3.7"
log = "0.4.8"
cbor_event = "2.1.3"
env_logger = "0.7.1"
chrono = "0.4.10"
