[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "WebBundle Bench"
edition = "2021"
license = "Apache-2.0"
name = "webbundle-bench"
readme = "../README.md"
repository = "https://github.com/google/webbundle"
version = "0.5.1"

[dependencies]
anyhow = "1.0.57"
askama = "0.11.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
webbundle = { path = "../webbundle", version = "^0.5.1" }
