[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "WebBundle cli"
edition = "2021"
license = "Apache-2.0"
name = "webbundle-cli"
readme = "../README.md"
repository = "https://github.com/google/webbundle"
version = "0.2.0"

[dependencies]
structopt = "0.3.7"
env_logger = "0.7.1"
log = "0.4.8"
chrono = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbundle = { path = "../webbundle", version = "^0.2.0", features = ["fs"] }
tokio = { version = "0.2", features = ["macros"] }
anyhow = "1.0.26"

[[bin]]
name = "webbundle"
path = "src/main.rs"
