[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "WebBundle cli"
edition = "2021"
license = "Apache-2.0"
name = "webbundle-cli"
readme = "../README.md"
repository = "https://github.com/google/webbundle"
version = "0.5.1"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
chrono = "0.4.19"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
webbundle = { path = "../webbundle", version = "^0.5.1", features = ["fs"] }
tokio = { version = "1.18.2", features = ["macros"] }
anyhow = "1.0.57"
url = "2.2.2"

[[bin]]
name = "webbundle"
path = "src/main.rs"
