[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "WebBundle ffi"
edition = "2021"
license = "Apache-2.0"
name = "webbundle-ffi"
readme = "../README.md"
repository = "https://github.com/google/webbundle"
version = "0.3.0"

[lib]
name = "webbundle_ffi"
crate-type = ["staticlib"]

[dependencies]
webbundle = { path = "../webbundle", version = "^0.5.0" }
libc = "0.2.69"

[build-dependencies]
cbindgen = "0.14.1"
anyhow = "1.0.28"
