[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "WebBundle server"
edition = "2018"
license = "Apache-2.0"
name = "webbundle-server"
repository = "https://github.com/google/webbundle"
version = "0.1.0"

[dependencies]
anyhow = "1.0.26"
chrono = "0.4.10"
env_logger = "0.7.1"
headers = "0.3.1"
http = "0.2.0"
hyper = "0.13"
log = "0.4.8"
loggerv = "0.7"
mime = "0.3"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2", features = ["tls"] }
webbundle = { path = "../webbundle", version = "0.1.4-alpha.0"}
