[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "WebBundle server"
edition = "2021"
license = "Apache-2.0"
name = "webbundle-server"
readme = "../README.md"
repository = "https://github.com/google/webbundle"
version = "0.5.1"

[dependencies]
anyhow = "1.0.52"
axum = "0.4.4"
axum-extra = "0.1.1"
clap = { version = "4", features = ["derive"] }
headers = "0.3.5"
http = "0.2.6"
mime = "0.3.16"
serde = { version = "1.0.133", features = ["derive"] }
tokio = { version = "1.15.0", features = ["macros"] }
tracing = "0.1.29"
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
webbundle = { path = "../webbundle", version = "^0.5.1", features = ["fs"] }
futures-util = "0.3.19"
tower = "0.4.11"
url = "2.2.2"
