[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "WebBundle library"
edition = "2021"
license = "Apache-2.0"
name = "webbundle"
readme = "../README.md"
repository = "https://github.com/google/webbundle"
version = "0.1.4"

[dependencies]
url = "2.1.1"
anyhow = "1.0.26"
log = "0.4.8"
cbor_event = "2.1.3"
http = "0.2.0"
headers = { version = "0.3.1", optional = true }
tokio = { version = "0.2", features = ["fs", "macros"], optional = true }
walkdir = { version = "2.3.1", optional = true }
pathdiff = { version = "0.1.0", optional = true}
mime_guess = { version = "2.0.1", optional = true }

[dev-dependencies]
tempfile = "3.2.0"

[features]
fs = ["headers", "pathdiff", "tokio", "walkdir", "mime_guess"]
