[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "WebBundle library"
edition = "2021"
license = "Apache-2.0"
name = "webbundle"
readme = "../README.md"
repository = "https://github.com/google/webbundle"
version = "0.2.0"

[dependencies]
anyhow = "1.0.52"
log = "0.4.14"
cbor_event = "2.1.3"
http = "0.2.6"
headers = { version = "0.3.5", optional = true }
tokio = { version = "1.15.0", features = ["full"], optional = true }
walkdir = { version = "2.3.2", optional = true }
pathdiff = { version = "0.2.1", optional = true }
mime_guess = { version = "2.0.3", optional = true }

[dev-dependencies]
tempfile = "3.3.0"

[features]
fs = ["headers", "pathdiff", "tokio", "walkdir", "mime_guess"]

[package.metadata."docs.rs"]
all-features = true
